k8s/grafana/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: grafana
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: server
              mountPath: /var/lib/grafana
              subPath: grafana
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
