k8s/grafana/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: grafana.staging.mchill.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
